--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>bread-byte-bakehouse-frontend</title>
     <meta name="description" content="Lovable Generated Project" />
     <meta name="author" content="Lovable" />
+    <meta name="google" content="notranslate" />
+    <meta name="translate" content="no" />
 
     <meta property="og:title" content="bread-byte-bakehouse-frontend" />
     <meta property="og:description" content="Lovable Generated Project" />
